Adds championship ranking page (#16)
* feat: Implement championship ranking page and fix image display

* test: Enhance RankingViewTest with Vaadin session mocking

* WIP

* feat: Add title match and contender management

- Add ability to mark matches for titles in ShowDetailView and ShowPlanningView.
- Add ability to view and update the #1 contender for each title in TitleListView.
- Fix compilation errors and test failures related to the new functionality.

* refactor: Reorder title selection UI and fix LazyInitializationException

- Reordered the 'Is Title Segment' checkbox and 'Titles' MultiSelectComboBox to appear before the narration fields in both the Add Segment and Edit Segment dialogs in ShowDetailView.java.
- Fixed LazyInitializationException by changing the fetch type of the 'titles' collection in Segment.java to EAGER.

* feat: Add Titles column to segment list

- Added a new column to the segments grid in ShowDetailView.java to display the titles associated with each segment.

* docs: Update TASK_LIST.md with completed tasks

* chore: Remove task list from git

* docs: Mark all tasks as complete in TASK_LIST.md

* chore: Untrack .gemini/TASK_LIST.md

* Add world title image

* feat: Enhance EditSegmentDialog and ProposedSegment for title management

* docs: Update task list

* feat: Add instructions for segment titles in SegmentNarrationContext and fix RankingViewTest

* fix: Correct .gemini path in .gitignore to ensure proper exclusion

* Remove .gemini/TASK_LIST.md from git

* Enhances E2E tests and narration context (#17)

* feat: Add instructions for segment titles in SegmentNarrationContext and fix RankingViewTest

* fix: Correct .gemini path in .gitignore to ensure proper exclusion

* Remove .gemini/TASK_LIST.md from git

* feat: Update E2E tests to use dynamic server port and enhance segment narration context

* feat: Add support for new testing library version and update RankingViewTest setup

* test: Add teardown method to RankingViewTest for 